@@ -2,11 +2,13 @@ package com.example.springloan.service;
 
 import com.example.springloan.exception.BaseException;
 import com.example.springloan.exception.ResultType;
+import com.example.springloan.repository.ApplicationRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
 import org.springframework.stereotype.Service;
+import org.springframework.util.FileSystemUtils;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.nio.file.Files;
@@ -22,25 +24,45 @@ public class FileStorageServiceImpl implements FileStorageService {
     @Value("${spring.servlet.multipart.location}")
     private String uploadPath;
 
+    private final ApplicationRepository applicationRepository;
+
     @Override
-    public void save(MultipartFile file) {
-        try{
-            Files.copy(file.getInputStream(), Paths.get(uploadPath).resolve(file.getOriginalFilename()),
-                    StandardCopyOption.REPLACE_EXISTING);
-        }catch (Exception e) {
+    public void save(Long applicationId, MultipartFile file) {
+
+        if (!isPresentApplication(applicationId)) {
+            throw new BaseException(ResultType.SYSTEM_ERROR);
+        }
+
+        try {
+
+            String applicationPath = uploadPath.concat("/" + applicationId);
+            Path directoryPath = Path.of(applicationPath);
+            if (Files.exists(directoryPath)) {
+                Files.createDirectories(directoryPath);
+            }
+
+            Files.copy(file.getInputStream(), Paths.get(uploadPath).resolve(file.getOriginalFilename()));
+
+        } catch (Exception e) {
             throw new BaseException(ResultType.SYSTEM_ERROR);
         }
     }
 
     @Override
-    public Resource load(String fileName) {
+    public Resource load(Long applicationId, String fileName) {
+
+        if (!isPresentApplication(applicationId)) {
+            throw new BaseException(ResultType.SYSTEM_ERROR);
+        }
 
         try {
-            Path file = Paths.get(uploadPath).resolve(fileName);
+            String applicationPath = uploadPath.concat("/" + applicationId);
+
+            Path file = Paths.get(applicationPath).resolve(fileName);
 
             Resource resource = new UrlResource(file.toUri());
 
-            if(resource.isReadable() || resource.exists()) {
+            if (resource.isReadable() || resource.exists()) {
                 return resource;
             } else {
                 throw new BaseException(ResultType.NOT_EXIST);
@@ -51,12 +73,31 @@ public class FileStorageServiceImpl implements FileStorageService {
     }
 
     @Override
-    public Stream<Path> loadAll() {
+    public Stream<Path> loadAll(Long applicationId) {
 
-        try {
-            return Files.walk(Paths.get(uploadPath),1).filter(path -> !path.equals(Paths.get(uploadPath)));
-        }catch (Exception e) {
+        if (!isPresentApplication(applicationId)) {
             throw new BaseException(ResultType.SYSTEM_ERROR);
         }
+
+        try {
+            String applicationPath = uploadPath.concat("/" + applicationId);
+            return Files.walk(Paths.get(applicationPath), 1).filter(path -> !path.equals(Paths.get(uploadPath)));
+        } catch (Exception e) {
+            throw new BaseException(ResultType.SYSTEM_ERROR);
+        }
+    }
+
+    @Override
+    public void deleteAll(Long applicationId) {
+
+        if (!isPresentApplication(applicationId)) {
+            throw new BaseException(ResultType.SYSTEM_ERROR);
+        }
+        String applicationPath = uploadPath.concat("/" + applicationId);
+        FileSystemUtils.deleteRecursively(Paths.get(applicationPath).toFile());
+    }
+
+    private boolean isPresentApplication(Long applicationId) {
+        return applicationRepository.findById(applicationId).isPresent();
     }
 }
